check_output.txt
    Checking api-gateway v0.1.1 (/Users/chanthawat/Developments/gridtokenx-platform/gridtokenx-apigateway)
error[E0432]: unresolved import `sqlx::types::BigDecimal`
 --> src/models/energy.rs:3:5
  |
3 | use sqlx::types::BigDecimal;
  |     ^^^^^^^^^^^^^^^^^^^^^^^ no `BigDecimal` in `types`
  |
help: a similar name exists in the module
  |
3 - use sqlx::types::BigDecimal;
3 + use sqlx::types::Decimal;
  |
help: consider importing this struct instead
  |
3 - use sqlx::types::BigDecimal;
3 + use bigdecimal::BigDecimal;
  |

error[E0433]: failed to resolve: use of undeclared type `Utc`
  --> src/handlers/transactions/mod.rs:80:55
   |
80 |             created_at: row.created_at.unwrap_or_else(Utc::now),
   |                                                       ^^^ use of undeclared type `Utc`
   |
help: consider importing one of these structs
   |
 4 + use chrono::Utc;
   |
 4 + use sqlx::types::chrono::Utc;
   |

error[E0433]: failed to resolve: use of undeclared type `Utc`
   --> src/handlers/transactions/mod.rs:158:55
    |
158 |             created_at: row.created_at.unwrap_or_else(Utc::now),
    |                                                       ^^^ use of undeclared type `Utc`
    |
help: consider importing one of these structs
    |
  4 + use chrono::Utc;
    |
  4 + use sqlx::types::chrono::Utc;
    |

error[E0433]: failed to resolve: use of undeclared type `Utc`
   --> src/handlers/transactions/mod.rs:251:59
    |
251 |                 created_at: row.created_at.unwrap_or_else(Utc::now),
    |                                                           ^^^ use of undeclared type `Utc`
    |
help: consider importing one of these structs
    |
  4 + use chrono::Utc;
    |
  4 + use sqlx::types::chrono::Utc;
    |

error[E0433]: failed to resolve: use of undeclared type `Utc`
   --> src/handlers/transactions/mod.rs:342:55
    |
342 |             created_at: row.created_at.unwrap_or_else(Utc::now), // Fallback
    |                                                       ^^^ use of undeclared type `Utc`
    |
help: consider importing one of these structs
    |
  4 + use chrono::Utc;
    |
  4 + use sqlx::types::chrono::Utc;
    |

error[E0412]: cannot find type `BigDecimal` in this scope
   --> src/services/erc_service.rs:888:17
    |
888 |     active_kwh: BigDecimal,
    |                 ^^^^^^^^^^
    |
   ::: /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal-1.39.0/src/decimal.rs:116:1
    |
116 | pub struct Decimal {
    | ------------------ similarly named struct `Decimal` defined here
    |
help: a struct with a similar name exists
    |
888 -     active_kwh: BigDecimal,
888 +     active_kwh: Decimal,
    |
help: consider importing this struct
    |
  1 + use bigdecimal::BigDecimal;
    |

error[E0412]: cannot find type `BigDecimal` in this scope
   --> src/services/erc_service.rs:889:18
    |
889 |     retired_kwh: BigDecimal,
    |                  ^^^^^^^^^^
    |
   ::: /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal-1.39.0/src/decimal.rs:116:1
    |
116 | pub struct Decimal {
    | ------------------ similarly named struct `Decimal` defined here
    |
help: a struct with a similar name exists
    |
889 -     retired_kwh: BigDecimal,
889 +     retired_kwh: Decimal,
    |
help: consider importing this struct
    |
  1 + use bigdecimal::BigDecimal;
    |

error[E0412]: cannot find type `BigDecimal` in this scope
   --> src/services/erc_service.rs:890:16
    |
890 |     total_kwh: BigDecimal,
    |                ^^^^^^^^^^
    |
   ::: /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal-1.39.0/src/decimal.rs:116:1
    |
116 | pub struct Decimal {
    | ------------------ similarly named struct `Decimal` defined here
    |
help: a struct with a similar name exists
    |
890 -     total_kwh: BigDecimal,
890 +     total_kwh: Decimal,
    |
help: consider importing this struct
    |
  1 + use bigdecimal::BigDecimal;
    |

error[E0412]: cannot find type `BigDecimal` in this scope
   --> src/services/erc_service.rs:896:21
    |
896 |     pub active_kwh: BigDecimal,
    |                     ^^^^^^^^^^
    |
   ::: /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal-1.39.0/src/decimal.rs:116:1
    |
116 | pub struct Decimal {
    | ------------------ similarly named struct `Decimal` defined here
    |
help: a struct with a similar name exists
    |
896 -     pub active_kwh: BigDecimal,
896 +     pub active_kwh: Decimal,
    |
help: consider importing this struct
    |
  1 + use bigdecimal::BigDecimal;
    |

error[E0412]: cannot find type `BigDecimal` in this scope
   --> src/services/erc_service.rs:897:22
    |
897 |     pub retired_kwh: BigDecimal,
    |                      ^^^^^^^^^^
    |
   ::: /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal-1.39.0/src/decimal.rs:116:1
    |
116 | pub struct Decimal {
    | ------------------ similarly named struct `Decimal` defined here
    |
help: a struct with a similar name exists
    |
897 -     pub retired_kwh: BigDecimal,
897 +     pub retired_kwh: Decimal,
    |
help: consider importing this struct
    |
  1 + use bigdecimal::BigDecimal;
    |

error[E0412]: cannot find type `BigDecimal` in this scope
   --> src/services/erc_service.rs:898:20
    |
898 |     pub total_kwh: BigDecimal,
    |                    ^^^^^^^^^^
    |
   ::: /Users/chanthawat/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rust_decimal-1.39.0/src/decimal.rs:116:1
    |
116 | pub struct Decimal {
    | ------------------ similarly named struct `Decimal` defined here
    |
help: a struct with a similar name exists
    |
898 -     pub total_kwh: BigDecimal,
898 +     pub total_kwh: Decimal,
    |
help: consider importing this struct
    |
  1 + use bigdecimal::BigDecimal;
    |

warning: unused import: `std::str::FromStr`
 --> src/error.rs:8:5
  |
8 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> src/handlers/dashboard.rs:4:5
  |
4 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `crate::services::meter_verification_service::MeterRegistry`
   --> src/handlers/user_management.rs:889:5
    |
889 | use crate::services::meter_verification_service::MeterRegistry;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `rust_decimal::prelude::*`
 --> src/services/amm_service.rs:4:5
  |
4 | use rust_decimal::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::sync::Arc`
 --> src/services/amm_service.rs:7:5
  |
7 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `error`
 --> src/services/amm_service.rs:8:15
  |
8 | use tracing::{error, info, instrument};
  |               ^^^^^

warning: unused import: `std::str::FromStr`
   --> src/services/erc_service.rs:445:13
    |
445 |         use std::str::FromStr;
    |             ^^^^^^^^^^^^^^^^^

warning: unused import: `EncodedConfirmedTransactionWithStatusMeta`
 --> src/services/event_processor_service.rs:5:33
  |
5 | use solana_transaction_status::{EncodedConfirmedTransactionWithStatusMeta, UiTransactionEncoding};
  |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
  --> src/services/market_clearing.rs:10:5
   |
10 | use std::str::FromStr;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
  --> src/services/meter_service.rs:73:13
   |
73 |         use std::str::FromStr;
   |             ^^^^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
   --> src/services/meter_service.rs:627:13
    |
627 |         use std::str::FromStr;
    |             ^^^^^^^^^^^^^^^^^

warning: unused import: `Duration`
 --> src/services/meter_verification_service.rs:3:24
  |
3 | use chrono::{DateTime, Duration, Utc};
  |                        ^^^^^^^^

warning: unused import: `anyhow::anyhow`
 --> src/services/order_matching_engine.rs:2:5
  |
2 | use anyhow::anyhow;
  |     ^^^^^^^^^^^^^^

warning: unused import: `std::str::FromStr`
 --> src/services/order_matching_engine.rs:7:5
  |
7 | use std::str::FromStr;
  |     ^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0412, E0432, E0433.
For more information about an error, try `rustc --explain E0412`.
warning: `api-gateway` (lib) generated 14 warnings
error: could not compile `api-gateway` (lib) due to 11 previous errors; 14 warnings emitted
